--- a/ngapp/src/app/nav-bar/digital-reader-library/digital-reader-library.component.scss
+++ b/ngapp/src/app/nav-bar/digital-reader-library/digital-reader-library.component.scss
@@ -139,12 +139,9 @@ input[type="file"] {
   display: none;
 }
 
-/*.file-upload {
-  border: 1px solid #ccc;
-  display: inline-block;
-  padding: 6px 12px;
-  
-}*/
+app-dr-story-drawer {
+  margin: 0 auto;
+}
 
 .footerLARA {
     display: flex;
