--- a/ngapp/src/app/nav-bar/dr-story-drawer/dr-story-drawer.component.html
+++ b/ngapp/src/app/nav-bar/dr-story-drawer/dr-story-drawer.component.html
@@ -1,5 +1,6 @@
 <div class="body">
-  <div *ngIf="storyList.length > 0">
+  <!--<div *ngIf="storyList.length > 0">-->
+  <div>
     <div class="myStories">{{ title }}</div>
     <!-- search bar -->
     <div class="form-group">
