--- a/ngapp/src/app/nav-bar/dr-story-drawer/dr-story-drawer.component.html
+++ b/ngapp/src/app/nav-bar/dr-story-drawer/dr-story-drawer.component.html
@@ -41,7 +41,9 @@
         </div>
 
         <div class="imgContainer">
-          <img src="assets/img/logo-S.png" class="storyImg" alt="image">
+          <!--<img src="assets/img/logo-S.png" class="storyImg" alt="image">-->
+          <!--<img [src]="story.thumbnail==''? 'assets/img/logo-S.png' : story.thumbnail" class="storyImg" alt="image">-->
+          <img [src]="story.thumbnail==''?'assets/img/logo-S.png':story.thumbnail" class="storyImg" alt="image">
         </div>
 
         <!-- title container-->
