--- a/ngapp/src/app/nav-bar/dr-story-drawer/dr-story-drawer.component.scss
+++ b/ngapp/src/app/nav-bar/dr-story-drawer/dr-story-drawer.component.scss
@@ -39,13 +39,15 @@
     width: 250px;
     //height: 270px;
     height: 85%;  
-    position:relative
+    position:relative;
+
+    background-color: #eee;
+    border-radius: 25px;
 }   
 
 .contentSection:hover {
     cursor: pointer;
-    background-color: #eee;
-    border-radius: 25px;
+    background-color: var(--scealai-cream);
 }
 
 .titleContainer {
