--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.scss
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.scss
@@ -3,227 +3,49 @@
     padding-bottom: 20px;
     animation-duration: 1s;
     animation-name: fadeIn;
+    text-align: left;
 }
 
-.playback {   
-    margin: 8px;
-    padding: 10px;
-    font-weight: bold;
+.storyContainer {
+    //padding-left: 20px;
+    //padding-right: 20px;
+    padding: 40px;
 }
 
-.synth-item {
-    margin-bottom: 4px;
+.storyContainer > * {
+    //margin-bottom:30px;
+    margin-bottom:1.2em;
 }
 
-.speed-container {
-    border-radius: 0px;
-    border-width: 1px;
-    border-color: black;
-    max-width: fit-content;
-    color: black;
-    font-weight: 500;
-    display: inline;
-    justify-content: center;
+.storyContainer > p {
+    font-size: 1.3em;
 }
 
-.button.timer-button {
-    margin:4px; border-radius: 4px; border-width: 1px;
+.storyContainer img {
+    //width:auto !important;
+    //width: auto !important;
+    height:auto !important;
+    max-width:100% !important;
+    aspect-ratio:auto;
+
+    // for centering
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.timer-button.on {
-    background-color: #6eff81;
-}
-
-.timer-button.on:hover {
-    background-color: #6eff81;
-}
-
-.timer-button.off {
-    background-color: rgba(255, 60, 60, 0.76);
-}
-
-.timer-button.off:hover {
-    background-color: rgba(255, 60, 60, 0.76);
-}
-
-.button.timer-button.unavailable {
-    background-color: rgba(110, 110, 110, 0.76);
-}
-
-.timer-button.unavailable:hover {
-    background-color: rgba(110, 110, 110, 0.76);
-    box-shadow: 0px 15px 20px rgba(71, 71, 71, 0.2);
-}
-
-.victory {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: darkolivegreen;
-}
-
-.buttons-and-templates {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
-
-.hiddenWordButton {
-    margin-top: 4px;
-    border-radius: 4px;
-    border-style: solid;
-    padding: 10px;
-}
-
-.hiddenWordButton.guessed {
-    border-color: rgba($color: #008f13, $alpha: 1.0);
-    background-color: rgba($color: rgba(131, 255, 131, 0.459), $alpha: 1.0);
-}
-
-.hiddenWordButton.pressed {
-    border-color: rgba($color: #8f6200, $alpha: 1.0);
-    background-color: rgba($color: rgba(255, 199, 46, 0.671), $alpha: 1.0);
-}
-
-.hiddenWordButton.unguessed {
-    border-color: rgba($color: #8f0000, $alpha: 1.0);
-    background-color: rgba($color: rgba(255, 131, 131, 0.459), $alpha: 1.0);
-}
-
-.button-text {
-    margin: 0px;
-}
-
-.unguessed-class {
-    display: grid;
-    justify-content: center;
-    position: relative;
-}
-
-.unguessed-class .hint {
-    visibility: hidden;
-    min-width: 200px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
+.storyContainer > h1, h2, h3, h4, h5, h6 {
     text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    top: -35px;
-  }
-
-.unguessed-class:hover .hint{
-    visibility: visible;
 }
 
-.textarea {
-    width: 90%;
-    resize: none;
-    border-radius: 1px;
-    border-style: solid;
-    border-radius: 4px;
-    padding: 4px;
+.storyContainer > h1 {
+    font-size: 2.4em;
 }
 
-.victory-button {
-    border-width: 2px;
-    font-size: 14px;
-    background-color: rgba(112, 168, 127, 0.1);
-    border-color: rgb(112, 168, 127);
-    border-style: solid;
+.storyContainer .word:hover {
+    background-color: var(--scealai-light-green);
 }
 
-.speed-button {
-    border-radius: 0px;
-    border-width: 1px;
-}
-
-.button {
-    border-color: rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    border-width: 1px;
-    letter-spacing: 1px;
-    background-color: rgba(126, 118, 118, 0.1);
-    margin: 4px;
-    transition: all 0.3s ease 0s;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-}
-
-.button:hover {
-    background-color: var(--scealai-green);
-    color: #fff;
-    transform: translateY(-2px);
-}
-
-.playback-header {
-    margin: 2px; 
-    color: black; 
-    font-weight: 500;
-}
-
-.speed-button:hover {
-    cursor: pointer;
-}
-
-.synth-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 6px;
-}
-
-.recordingIcon {
-    margin-left: 0px;
-}
-
-.wrongWordBank {
-    padding: 12px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 1rem;
-    flex-wrap: wrap;
-}
-
-.wordBankItem {
-    border-color: rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    border-width: 1px;
-    letter-spacing: 1px;
-    background-color: rgba(126, 118, 118, 0.1);
-    padding: 10px;
-    font-weight: bold;
-}
-
-
-@keyframes fadeIn {
-    from {
-        opacity: 0%;
-        transform: translateY(100px) scale(0.9);
-    }
-
-    to {
-        opacity: 100%;
-        transform: translateY(0px) scale(1);
-    }
-}
-
-@keyframes fadeOut {
-    from {
-        opacity: 100%;
-        transform: translateY(0px) scale(1);
-    }
-
-    to {
-        opacity: 0%;
-        transform: translateY(100px) scale(0.9);
-    }
-}
-
-@keyframes fadeInButton {
-    from {
-        opacity: 0%;
-    }
-
-    to {
-        opacity: 100%;
-    }
+.storyContainer .sentence:hover {
+    background-color: var(--scealai-cream);
 }
