--- a/ngapp/src/app/dr-story-viewer/dr-story-viewer/dr-story-viewer.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-viewer/dr-story-viewer.component.html
@@ -1,7 +1,7 @@
 
-<div class="container">
+<!--<div class="container">
     <h1>Test page!</h1>    
-</div>
+</div>-->
 <ng-container *ngIf="story">
     <app-dr-story-builder 
     [type]="body"
