--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
@@ -1,9 +1,22 @@
 
-<div class="container">
+<!--<div class="container">
     <div class="storyContainer"
     [innerHTML]="forceTrustedHTML"> 
     </div>
-</div>
+</div>-->
+
+<div class="ql-container" #quillHeightSpan>
+    <!-- STORY DRAWER BUTTON-->
+    <!-- QUILL EDITOR AND TOOLBAR-->
+     <!--[(ngModel)]="forceTrustedHTML"-->
+    <quill-editor
+      placeholder=""
+      [preserveWhitespace]="true"
+      [debounceTime]="1500"
+      [(ngModel)]="content.innerHTML"
+    ></quill-editor>
+    <!--[(ngModel)]="forceTrustedHTML"-->
+  </div>
 
 <!--<span style="max-width: 500px;">
     <ng-container
