Quill experiment did not work out as it always looks for a minimal tree - removing important span information

--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
@@ -1,22 +1,17 @@
 
-<!--<div class="container">
+<div class="container">
     <div class="storyContainer"
     [innerHTML]="forceTrustedHTML"> 
     </div>
-</div>-->
+</div>
 
-<div class="ql-container" #quillHeightSpan>
-    <!-- STORY DRAWER BUTTON-->
-    <!-- QUILL EDITOR AND TOOLBAR-->
-     <!--[(ngModel)]="forceTrustedHTML"-->
-    <quill-editor
-      placeholder=""
-      [preserveWhitespace]="true"
-      [debounceTime]="1500"
-      [(ngModel)]="content.innerHTML"
-    ></quill-editor>
-    <!--[(ngModel)]="forceTrustedHTML"-->
-  </div>
+<!--<div class="ql-container" #quillHeightSpan>
+    <quill-view
+    
+    [content]="content.innerHTML">
+
+    </quill-view>
+</div>-->
 
 <!--<span style="max-width: 500px;">
     <ng-container
