Prototyping word-level highlighting when playing a story

--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
@@ -1,4 +1,19 @@
 
+<div class="Toolbar">
+    <button
+    (click)="play()"
+    >prevSent</button>
+    <button
+    (click)="play()"
+    >play</button>
+    <button
+    (click)="pause()"
+    >pause</button>
+    <button
+    (click)="play()"
+    >nextSent</button>
+</div> <br>
+
 <div class="container">
     <div class="storyContainer"
     [innerHTML]="forceTrustedHTML"> 
