--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
@@ -4,7 +4,7 @@
     (click)="play()"
     >prevSent</button>
     <button
-    (click)="play()"
+    (click)="playStory()"
     >play</button>
     <button
     (click)="pause()"
