Work on toolbar and word-level animation

--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
@@ -1,17 +1,19 @@
 
 <div class="Toolbar">
-    <button
+    <!--<button
     (click)="play()"
-    >prevSent</button>
+    >prevSent</button>-->
     <button
+    class="play"
     (click)="playStory()"
-    >play</button>
+    >▸</button>
     <button
+    class="pause"
     (click)="pause()"
-    >pause</button>
-    <button
+    >❚❚</button>
+    <!--<button
     (click)="play()"
-    >nextSent</button>
+    >nextSent</button>-->
 </div> <br>
 
 <div class="container">
