--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.scss
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.scss
@@ -4,6 +4,8 @@
     animation-duration: 1s;
     animation-name: fadeIn;
     text-align: left;
+
+    min-width: 320px;
 }
 
 .storyContainer {
@@ -65,25 +67,55 @@
 .Toolbar {
     position: sticky;
     top: 0;
+
+    padding: 10px 5px;
     
     background-color: var(--scealai-green);
     max-width: 60%;
-    margin: auto;
+    
     display: flex;
     flex-direction: row;
-    justify-content: center;
     
-    margin: 0 auto;
+    vertical-align: middle;
+    margin: auto;
+    //align-items: center;
+    //justify-content: center;
+
+    border-radius: 4px;
+
+    min-width: 320px;
+}
+
+.Toolbar > div {
+    //something here about the containing div
+    height: 40px;
+    //width:50%;
 }
 
 .Toolbar > * {
+    //margin-right: 5px;
+    //margin-left: 5px;
+    padding: 0;
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Toolbar > .playbackControls > button {
     border: none;
     background-color: white;
     color: var(--scealai-green);
     vertical-align: middle;
 
-    width: 70px;
-    height: 40px;
+
+    // the logic is wrong somewhere here
+    min-width: 20px;
+    //max-width: 40px;
+    width: 15%;
+    //
+
+    height: inherit;
 
     margin-right: 5px;
     margin-left: 5px;
@@ -98,11 +130,67 @@
     border-radius: 5px;
 }
 
+.Toolbar > .voiceSelection {
+    // These two attributes go together
+    position: absolute;
+    right: 5px;
+    //
+
+    //width: 200px;
+    width: 50%;
+    //height: 40px;
+}
+
+.Toolbar > .playbackControls {
+    // These two attributes go together
+    //position: absolute;
+    //right: 5px;
+    //
+    width: 50%;
+
+    //width: 50%;
+    //height: 40px;
+}
+
+.Toolbar > .voiceSelection > button {
+    background-color: white;
+    color: var(--scealai-green);
+
+    height: inherit;
+    vertical-align: middle;
+
+    font-size: 20px;
+
+    width: 70%;
+    //min-width: 200px;
+    //min-width: 100px;
+
+    /*overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;*/
+
+    /*overflow-x: hidden;
+    overflow-y: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;*/
+}
+
+.Toolbar > .voiceSelection > button > span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.Toolbar > .voiceSelection > button > mat-icon {
+    transform: scale(1.5);
+    min-width: 18px;
+}
+
 .play {
     font-size: 40px;
 }
 
-button.playing {
+.Toolbar > .playbackControls > button.playing, .Toolbar > .playbackControls > button.paused {
     background-color: var(--scealai-cream);
 }
 
@@ -111,16 +199,16 @@ button.playing {
 }
 
 .voiceSelection {
-    display: flex;
-    flex-direction: row;
+    //display: flex;
+    //flex-direction: row;
     //right: 0;
 }
 
-.voiceSelection mat-form-field {
+/*.voiceSelection mat-form-field {
     //margin: auto auto;
     max-width: 150px;
     //max-width: min-content;
-}
+}*/
 
 /*html {
     scroll-behavior: smooth;
