--- a/ngapp/src/app/dr-story-viewer/dr-story-viewer/dr-story-viewer.component.scss
+++ b/ngapp/src/app/dr-story-viewer/dr-story-viewer/dr-story-viewer.component.scss
@@ -1,8 +1,10 @@
+
 .container {
     max-width: 70%;
     padding-bottom: 20px;
     animation-duration: 1s;
     animation-name: fadeIn;
+    min-width: 320px;
 }
 
 .playback {   
