--- a/ngapp/src/app/dr-story-viewer/dr-story-viewer/dr-story-viewer.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-viewer/dr-story-viewer.component.html
@@ -3,9 +3,9 @@
     <h1>Test page!</h1>    
 </div>-->
 <ng-container *ngIf="story">
-    <app-dr-story-builder 
-    [type]="body"
-    [content]="story"></app-dr-story-builder>
+    <app-dr-story-builder
+    [content]="story"
+    [storyId]="storyId"></app-dr-story-builder>
     <!--<iframe
     [srcdoc]="story.innerHTML"
     style="width:100%;height:500px">
